Se añadio los CU11 y CU12
